fixed aligns roughly

--- a/responsive.css
+++ b/responsive.css
@@ -11,10 +11,22 @@
   .custom-ul {
     flex-direction: column;
   }
+  .custom-nav ul li {
+    list-style: none;
+    padding-left: 10px;
+    padding-right: 0px;
+    margin-top: 20px;
+  }
 
   .custom-nav .material-icons {
     display: block;
   }
+
+  .image .imagecover {
+    width: 0vw;
+    height: 0vw;
+  }
+
   /*--------------------Home--------------*/
 
   #home {
@@ -58,9 +70,9 @@
   #AboutMe .custom-div .Skills,
   .Experience,
   .Education {
-    width: 100%;
+    width: 90%;
     height: 400px;
-    margin: 25px;
+    margin: 0px;
     border-radius: 25px;
     text-align: center;
     background-color: l;
@@ -75,6 +87,48 @@
     height: 1100px;
   }
   #Languages .icons {
+    margin-left: 0px;
+    margin-right: 0px;
+    flex-direction: column;
+  }
+
+  /*------------------myWork---------------*/
+  #MyWork .custom-div .row {
+    display: flex;
+    justify-content: center;
+  }
+  #MyWork .custom-div .row .col1 {
+    margin: 0px;
+    justify-self: center;
+    width: 90%;
+    transform: translateX(0%);
+  }
+
+  #MyWork .custom-div .row:hover .col1 {
+    width: 90%;
+    transform: translateX(0%);
+  }
+
+  #MyWork .custom-div .row .col2 {
+    justify-self: center;
+    margin: 0px;
+    width: 90%;
+    opacity: 1;
+    transform: translateX(0%);
+    padding-bottom: 50px;
+  }
+
+  #MyWork .custom-div .row:hover .col2 {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+
+  /*--------------------------------Footer---------------*/
+  .custom-div1 {
+    margin-left: 0px;
+    margin-right: 0px;
+    border-radius: 25px;
+    display: flex;
     flex-direction: column;
   }
 }
